--- a/i18n/cli/ja.json
+++ b/i18n/cli/ja.json
@@ -2,14 +2,13 @@
     "welcome": "いらっしゃいませ。",
     "go_to_recipe_making": "ハッシュ関数の組み合わせを作る",
     "make_hashed_password": "パスワードをハッシュ化する",
-    "make_selection": "番号を入力して選択してね",
-    "which_algorithm_add_and_layered": "重ねるハッシュ関数の組み合わせは？",
+    "select_by_input_num": "番号を入力して選択してね",
     "ask_is_variable_length_hash": "パスワードの長さは指定できる？(`指定できる`の場合、ハッシュ関数は可変長をサポートするもののみ使えます)",
-    "which_recipe_would_you_like": "どのアルゴリズムの組み合わせを使うの？",
-    "what_name_trans_system": "名前をつけてください",
+    "which_recipe_would_you_like": "使うアルゴリズム組み合わせを選んでください",
+    "make_name_for_recipe": "組み合わせに名前をつけてください",
     "input_password": "ハッシュ化するパスワードを入力してください",
-    "no_recipe": "その前に、アルゴリズムを組ませてね",
-    "recipe_generated": "覚えとくね",
+    "recipes_is_empty_plz_make": "アルゴリズム組み合わせがまだ作成されていません",
+    "generated_recipe_is": "作成したアルゴリズム組み合わせ",
     "password_generated": "その心は、",
     "copied_to_clipboard": "（クリップボードにコピーしといたよ）",
     "cancel": "やめる",
