add auto clipboard feature

--- a/i18n/cli/ja.json
+++ b/i18n/cli/ja.json
@@ -10,7 +10,7 @@
     "recipes_is_empty_plz_make": "アルゴリズム組み合わせがまだ作成されていません",
     "generated_recipe_is": "作成したアルゴリズム組み合わせ",
     "password_generated": "その心は、",
-    "copied_to_clipboard": "（クリップボードにコピーしといたよ）",
+    "copied_to_clipboard": "（クリップボードにコピーしました）",
     "cancel": "やめる",
     "submit": "決定",
     "exit": "終了",
